fixed abnormal spacing in intro and pro-box radius

--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@ section {
 .intro-left #intro-h2-2 {
     font-size: 1vw;
     font-weight: 400;
-    padding-top: 1vh;
+    padding-top: 0.5vw;
     white-space: nowrap;
 }
 .intro-right {
@@ -154,7 +154,7 @@ section {
 }
 .project-card { 
     background-color: #f3f3f3;
-    border-radius: 15px;
+    border-radius: 0.75vw;
     border: 1px solid black;
     box-shadow: 0px 4px 24px 1px rgba(0, 0, 0, 0.1);
     margin-top: 3%;
